k8s/recommendation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
    spec:
      containers:
        - image: ninavelikajne/recommendation-system:2021-12-21-23-03-39
          name: recommendation
          ports:
            - containerPort: 3333
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
         

---

apiVersion: v1
kind: Service
metadata:
  name: recommendation
spec:
  type: LoadBalancer
  ports:
    - port: 3333
      protocol: TCP
      targetPort: server
  selector:
    app: recommendation
