k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxyingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /consul(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: consul-consul-server
                port:
                  number: 8500
          - path: /recommendation(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: recommendation
                port:
                  number: 3333
